# derive-diesel-id

./: .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
