[package]
name = "derive-id"
version = "0.1.6"
edition = "2018"
description = "Simple NewType ID's specifically tailored to integrate with Async GraphQL and Diesel"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5"
derive_more = "0.99.17"
diesel-derive-newtype = "2.0.0-rc.0"
serde = "1"

[dev-dependencies]
diesel = "2"
